Fix upload issues